--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     compile(
             'com.jakewharton.timber:timber:2.5.0',
-            'com.jakewharton:butterknife:6.0.0'
+            'com.jakewharton:butterknife:6.0.0',
+            'org.java-websocket:Java-WebSocket:1.3.0'
     )
 }
