--- a/tv-app/build.gradle
+++ b/tv-app/build.gradle
@@ -22,8 +22,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile 'com.android.support:leanback-v17:21.0.3'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile(
+            'com.android.support:recyclerview-v7:21.0.3',
+            'com.android.support:leanback-v17:21.0.3',
+            'com.android.support:appcompat-v7:21.0.3',
+            'com.squareup.picasso:picasso:2.4.0',
+            'org.java-websocket:Java-WebSocket:1.3.0'
+    )
 }
