--- a/tv-app/build.gradle
+++ b/tv-app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
             'com.android.support:leanback-v17:21.0.3',
             'com.android.support:appcompat-v7:21.0.3',
             'com.squareup.picasso:picasso:2.4.0',
-            'org.java-websocket:Java-WebSocket:1.3.0'
+            'org.java-websocket:Java-WebSocket:1.3.0',
+            'com.joanzapata.pdfview:android-pdfview:1.0.+@aar'
     )
 }
